Fix navbar alignment on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -71,21 +71,21 @@ body {
   }
 }
 
-.social-ig{
-  padding: 0px 40px
+.social-ig {
+  padding: 0px 40px;
 }
 
-.Contact-Social{
+.Contact-Social {
   max-width: 100%;
   height: auto;
-  width: auto; 
+  width: auto;
   display: flex;
 }
 
-.Hosted-Games h2{
-text-align: center;
+.Hosted-Games h2 {
+  text-align: center;
 }
 
-.Location h2{
+.Location h2 {
   text-align: center;
 }
